--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2014-01-07 Aaron Russo <arusso@berkeley.edu> - 0.0.3
+* update license and copyright info
+
 2013-06-02 Aaron Russo <arusso@berkeley.edu> - 0.0.2
 * updating docs for acct rename
 
